[Nexters/covid-letter-web#21] 🎨 로컬스토리지에 TodoList 저장

--- a/src/components/TodoList.module.scss
+++ b/src/components/TodoList.module.scss
@@ -12,7 +12,9 @@
     max-width: 568px;
     width: 100%;
     padding: 30px 15px 0;
-    .empty {
+
+    .empty,
+    .loading {
         display: flex;
         flex: 1;
         justify-content: center;
