--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,9 +6,28 @@ html,
 body > div[id^='__next'],
 body {
     height: 100%;
+    font-size: 10pt;
 }
 
 :root {
+    --primary-green-800: #11373e;
+    --primary-green-700: #5e7c75;
+    --primary-green-600: #818d8a;
+
+    --primary-yellow-800: #11373e;
+
+    --grey-800: #22211f;
+    --grey-700: #5f5d59;
+    --grey-600: #807c76;
+    --grey-500: #adaaa5;
+    --grey-400: #bbbbbb;
+    --grey-300: #dfdfdf;
+    --grey-200: #efefef;
+    --grey-100: #f8f8f8;
+    --grey-000: #ffffff;
+
+    --beige-500: #cbc4a8;
+    --beige-400: #ded9c6;
     --beige-300: #eae6d7;
     --beige-200: #f6f4e8;
 }
