--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,11 +23,15 @@ h6 {
 }
 
 :root {
-    --primary-green-800: #11373e;
-    --primary-green-700: #5e7c75;
-    --primary-green-600: #818d8a;
+    --primary-green-600: #07282e;
+    --primary-green-500: #11373e;
+    --primary-green-400: #5e7c75;
+    --primary-green-300: #818d8a;
 
-    --primary-yellow-800: #11373e;
+    --primary-yellow-600: #d1a65a;
+    --primary-yellow-500: #dcae5c;
+    --primary-yellow-400: #e7bf78;
+    --primary-yellow-300: #eac98f;
 
     --grey-800: #22211f;
     --grey-700: #5f5d59;
@@ -39,8 +43,13 @@ h6 {
     --grey-100: #f8f8f8;
     --grey-000: #ffffff;
 
+    --beige-600: #b6a76f;
     --beige-500: #cbc4a8;
     --beige-400: #ded9c6;
     --beige-300: #eae6d7;
     --beige-200: #f6f4e8;
+
+    --blue-500: #6993ff;
+    --red-500: #ff6463;
+    --green-500: #4bccae;
 }
