[Nexters/covid-letter-web#34] 💄 나눔바른고딕 추가

--- a/public/assets/styles/font.css
+++ b/public/assets/styles/font.css
@@ -13,3 +13,27 @@
     font-weight: bold;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'NanumBarunGothic';
+    src: url('../fonts/NanumBarunGothic.woff2');
+    src: url('../fonts/NanumBarunGothic.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'NanumBarunGothic';
+    src: url('../fonts/NanumBarunGothicLight.woff2');
+    src: url('../fonts/NanumBarunGothicLight.woff2') format('woff2');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'NanumBarunGothic';
+    src: url('../fonts/NanumBarunGothicBold.woff2');
+    src: url('../fonts/NanumBarunGothicBold.woff2') format('woff2');
+    font-weight: bold;
+    font-style: normal;
+}
