--- a/public/assets/styles/index.css
+++ b/public/assets/styles/index.css
@@ -16568,6 +16568,16 @@ video {
   font-family: NanumBarunGothic, Arial, sans-serif;
 }
 
+.tw-text-3xs {
+  font-size: 0.9rem;
+  line-height: 1.4rem;
+}
+
+.tw-text-2xs {
+  font-size: 1rem;
+  line-height: 1.6rem;
+}
+
 .tw-text-xs {
   font-size: 1.2rem;
   line-height: 1.9rem;
@@ -36988,6 +36998,16 @@ h6 {
     font-family: NanumBarunGothic, Arial, sans-serif;
   }
 
+  .sm\:tw-text-3xs {
+    font-size: 0.9rem;
+    line-height: 1.4rem;
+  }
+
+  .sm\:tw-text-2xs {
+    font-size: 1rem;
+    line-height: 1.6rem;
+  }
+
   .sm\:tw-text-xs {
     font-size: 1.2rem;
     line-height: 1.9rem;
@@ -57182,6 +57202,16 @@ h6 {
 
   .md\:tw-font-nanumBarunGothic {
     font-family: NanumBarunGothic, Arial, sans-serif;
+  }
+
+  .md\:tw-text-3xs {
+    font-size: 0.9rem;
+    line-height: 1.4rem;
+  }
+
+  .md\:tw-text-2xs {
+    font-size: 1rem;
+    line-height: 1.6rem;
   }
 
   .md\:tw-text-xs {
@@ -77380,6 +77410,16 @@ h6 {
     font-family: NanumBarunGothic, Arial, sans-serif;
   }
 
+  .lg\:tw-text-3xs {
+    font-size: 0.9rem;
+    line-height: 1.4rem;
+  }
+
+  .lg\:tw-text-2xs {
+    font-size: 1rem;
+    line-height: 1.6rem;
+  }
+
   .lg\:tw-text-xs {
     font-size: 1.2rem;
     line-height: 1.9rem;
@@ -97576,6 +97616,16 @@ h6 {
     font-family: NanumBarunGothic, Arial, sans-serif;
   }
 
+  .xl\:tw-text-3xs {
+    font-size: 0.9rem;
+    line-height: 1.4rem;
+  }
+
+  .xl\:tw-text-2xs {
+    font-size: 1rem;
+    line-height: 1.6rem;
+  }
+
   .xl\:tw-text-xs {
     font-size: 1.2rem;
     line-height: 1.9rem;
@@ -117770,6 +117820,16 @@ h6 {
 
   .\32xl\:tw-font-nanumBarunGothic {
     font-family: NanumBarunGothic, Arial, sans-serif;
+  }
+
+  .\32xl\:tw-text-3xs {
+    font-size: 0.9rem;
+    line-height: 1.4rem;
+  }
+
+  .\32xl\:tw-text-2xs {
+    font-size: 1rem;
+    line-height: 1.6rem;
   }
 
   .\32xl\:tw-text-xs {
