[Nexters/covid-letter-web#45] 💄 작성한 편지 수 마크업

--- a/public/assets/styles/index.css
+++ b/public/assets/styles/index.css
@@ -21031,6 +21031,7 @@ body > div[id^='__next'],
 body {
   height: 100%;
   font-size: 10px;
+  background-color: var(--beige-300);
 }
 
 html body,
