[Nexters/covid-letter-web#37] :lipstick: 컬러 팔렛트 추가

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -34,9 +34,11 @@ button:active {
 :root {
     --primary-green-600: #07282e;
     --primary-green-500: #11373e;
-    --primary-green-400: #5e7c75;
-    --primary-green-300: #818d8a;
+    --primary-green-400: #2d4f47;
+    --primary-green-300: #5e7c75;
+    --primary-green-200: #818d8a;
 
+    --primary-yellow-700: #c29b54;
     --primary-yellow-600: #d1a65a;
     --primary-yellow-500: #dcae5c;
     --primary-yellow-400: #e7bf78;
