[Nexters/covid-letter-web#64] :lipstick: 디자인시스템 수정

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -38,7 +38,7 @@ button:active {
     --primary-green-300: #5e7c75;
     --primary-green-200: #818d8a;
 
-    --primary-yellow-700: #c29b54;
+    --primary-yellow-700: #bb9045;
     --primary-yellow-600: #d1a65a;
     --primary-yellow-500: #dcae5c;
     --primary-yellow-400: #e7bf78;
