--- a/public/assets/styles/index.css
+++ b/public/assets/styles/index.css
@@ -21377,7 +21377,7 @@ button:active {
   --primary-yellow-400: #e7bf78;
   --primary-yellow-300: #eac98f;
   --grey-800: #22211f;
-  --grey-700: #5f5d59;
+  --grey-700: #5b5a57;
   --grey-600: #807c76;
   --grey-500: #adaaa5;
   --grey-400: #bbbbbb;
