[Nexters/covid-letter-web#47] 🎨 편지봉투 마크업 제목, 내용, 발송기준, 스탬프 처리

--- a/public/assets/styles/index.css
+++ b/public/assets/styles/index.css
@@ -21384,7 +21384,7 @@ button:active {
   --grey-600: #807c76;
   --grey-500: #adaaa5;
   --grey-400: #bbbbbb;
-  --grey-300: #dfdfdf;
+  --grey-300: #d9d7d2;
   --grey-200: #efefef;
   --grey-100: #f8f8f8;
   --grey-000: #ffffff;
