[Nexters/covid-letter-web#96] 🍱 beige-100 추가

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -64,6 +64,7 @@ button:active {
     --beige-400: #ded9c6;
     --beige-300: #eae6d7;
     --beige-200: #f6f4e8;
+    --beige-100: #fbf8ed;
 
     --blue-500: #6993ff;
     --red-500: #ff6463;
